--- a/new-retail-gateway/src/main/resources/bootstrap.yml
+++ b/new-retail-gateway/src/main/resources/bootstrap.yml
@@ -14,6 +14,8 @@ spring:
       transport:
         port: 8719
         dashboard: localhost:8080
+      filter:
+        enabled: false
     gateway:
       routes:
         - id: new-retail-auth
@@ -60,3 +62,10 @@ spring:
           uri: lb://new-retail-file
           predicates:
             - Path=/file/**
+  main:
+    allow-bean-definition-overriding: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
