--- a/new-retail-service/new-retail-service-product/pom.xml
+++ b/new-retail-service/new-retail-service-product/pom.xml
@@ -25,6 +25,12 @@
 
         <dependency>
             <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-common-redis</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zhihao</groupId>
             <artifactId>new-retail-common-rabbitmq</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
@@ -49,12 +55,6 @@
             <groupId>com.zhihao</groupId>
             <artifactId>new-retail-api-product</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.zhihao</groupId>
-                    <artifactId>new-retail-common-core</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
