--- a/new-retail-service/new-retail-service-product/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-product/src/main/resources/bootstrap.yml
@@ -50,6 +50,10 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     default-property-inclusion: non_null
+  redis:
+    host: localhost
+    port: 6379
+    database: 3
   rabbitmq:
     host: localhost
     port: 5672
