--- a/new-retail-service/new-retail-service-coupons/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-coupons/src/main/resources/bootstrap.yml
@@ -1,7 +1,3 @@
-server:
-  port: 4600
-  servlet:
-    context-path: /coupons
 spring:
   application:
     name: new-retail-coupons
@@ -44,7 +40,7 @@ spring:
           readwrite-lb:
             type: ROUND_ROBIN
     props:
-      sql-show: true
+      sql-show: false
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     default-property-inclusion: non_null
