--- a/new-retail-service/new-retail-service-pay/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-pay/src/main/resources/bootstrap.yml
@@ -1,7 +1,3 @@
-server:
-  port: 4500
-  servlet:
-    context-path: /pay
 spring:
   application:
     name: new-retail-pay
@@ -46,7 +42,7 @@ spring:
           readwrite-lb:
             type: ROUND_ROBIN
     props:
-      sql-show: true
+      sql-show: false
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     default-property-inclusion: non_null
