--- a/new-retail-service/new-retail-service-product/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-product/src/main/resources/bootstrap.yml
@@ -77,3 +77,5 @@ product:
     max-pool-size: 24
     work-queue-size: 1000
     keep-alive-seconds: 300
+  redisson:
+    address: redis://127.0.0.1:6379
