--- a/new-retail-service/new-retail-service-coupons/pom.xml
+++ b/new-retail-service/new-retail-service-coupons/pom.xml
@@ -25,6 +25,22 @@
 
         <dependency>
             <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-common-security</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.zhihao</groupId>
+                    <artifactId>new-retail-common-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.zhihao</groupId>
+                    <artifactId>new-retail-common-redis</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zhihao</groupId>
             <artifactId>new-retail-api-coupons</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
