--- a/new-retail-service/new-retail-service-user/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-user/src/main/resources/bootstrap.yml
@@ -27,6 +27,8 @@ spring:
         jdbc-url: jdbc:mysql://127.0.0.1:3306/new_retail_user?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
         username: root
         password: root
+        data-source-properties:
+          useLocalSessionState: false
       slave-01:
         type: com.zaxxer.hikari.HikariDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
