--- a/new-retail-service/new-retail-service-pay/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-pay/src/main/resources/bootstrap.yml
@@ -54,6 +54,7 @@ spring:
     username: guest
     password: guest
     virtual-host: /
+    publisher-confirm-type: correlated
     publisher-returns: true
     template:
       mandatory: true
