--- a/new-retail-service/new-retail-service-pay/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-pay/src/main/resources/bootstrap.yml
@@ -48,6 +48,9 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     default-property-inclusion: non_null
+  redis:
+    host: localhost
+    port: 6379
   rabbitmq:
     host: 192.168.43.2
     port: 5672
@@ -73,6 +76,18 @@ management:
 feign:
   sentinel:
     enabled: true
+xxl:
+  job:
+    admin:
+      addresses: http://127.0.0.1:8080/xxl-job-admin
+    accessToken: accessToken
+    executor:
+      appname: xxl-job-executor-sample
+      address:
+      ip:
+      port: 9999
+      logpath: /data/applogs/xxl-job/jobhandler
+      logretentiondays: 30
 pay:
   alipay:
     pc:
